adjusted spacing, still need to fix

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
 
 }
 
-#flexibleContainer {
+.container {
     background-color: #000;
     height: 100vh;
     width: 100vw;
@@ -24,7 +24,6 @@ body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    text-align: center;
 }
 
 #randomNumString {
@@ -45,12 +44,13 @@ body, html {
     font-size: 80px;
     font-weight: 500;
     line-height: 92%;
-    position:sticky;
+    /* position:sticky;
     top: 40%;
-    left: 10%;
+    right: 55%; */
 }
 
 .traitsClass {
+  /* display: inline-block; */
   color: greenyellow;
 }
 
@@ -65,3 +65,23 @@ body, html {
       border-color: transparent;
     }
   }
+
+#flexibleContainer #fullText {
+  /* position: -webkit-sticky;
+  top: 50%; /* Adjust this value to position vertically */
+  /* left: 50%; /* Adjust this value to position horizontally */
+  /* transform: translate(-50%, -50%); */ 
+  /* The transform property is used to center the element both horizontally and vertically */
+  
+  /* top: 30%;
+  right: 40%; */
+  /* float:left;width:40%; */
+
+  align-items: center;
+  font-family: triakis__font_lightregular, serif;
+  letter-spacing: 0.005m;
+  font-size: 80px;
+  font-weight: 500;
+  line-height: 92%;
+
+ }
